--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" > 
+    android:orientation="horizontal" 
+    android:background="@color/light_grey" > 
     
     <EditText android:id="@+id/edit_message"
         android:layout_weight="1" 
